Create login screen and more
+index.html
+css files
+js files
+background image

--- a/index.html
+++ b/index.html
@@ -4,11 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styles.css" />
     <title>Welcome to Jeguk</title>
 </head>
 
 <body>
+    <main id="main-screen">
+        <h1 class="main-header">Welcome to Jeguk</h1>
+        <form action="main.html" id="login-form">
+            <h3 class="login-form__header">What's your name?</h3>
+            <input class="login-form__input" type="text" />
+        </form>
+        <img class="bg-image" src="img/bg-image.png" />
+    </main>
 
+    <script src="js/login.js"></script>
 </body>
 
 </html>
