Added nav-bar and welcome-title

--- a/main.html
+++ b/main.html
@@ -1,1 +1,32 @@
-MAIN SCREEN.
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/main.css" />
+    <title>Main Jeguk</title>
+</head>
+
+<body>
+    <header class="nav-bar">
+        <h1 class="nav-bar__title">Welcome to Jeguk</h1>
+        <a>
+            <div class="icon-block">
+                <i class="fa-solid fa-circle-info"></i>
+                <span>info</span>
+            </div>
+        </a>
+    </header>
+
+    <main id="main-screen">
+        <h1 class="welcome-title"></h1>
+        <img class="bg-image" src="img/bg-image.png" />
+    </main>
+
+    <script src="https://kit.fontawesome.com/6ad0c68f5d.js" crossorigin="anonymous"></script>
+    <script src="js/main.js"></script>
+</body>
+
+</html>
