--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/login.css" />
     <title>Welcome to Jeguk</title>
 </head>
 
@@ -17,6 +18,7 @@
         </form>
         <img class="bg-image" src="img/bg-image.png" />
     </main>
+
 
     <script src="js/login.js"></script>
 </body>
