--- a/main.html
+++ b/main.html
@@ -12,9 +12,9 @@
 <body>
     <header class="nav-bar">
         <h1 class="nav-bar__title">Welcome to Jeguk</h1>
-        <a>
+        <a href="https://www.google.com">
             <div class="icon-block">
-                <i class="fa-solid fa-circle-info"></i>
+                <i class="fa-solid fa-circle-info fa-2x"></i>
                 <span>info</span>
             </div>
         </a>
@@ -22,6 +22,23 @@
 
     <main id="main-screen">
         <h1 class="welcome-title"></h1>
+
+        <div class="channels">
+            <a class="gemejoa-channel" href="https://www.youtube.com/@gemejoa">
+                <span>Developed by</span>
+                <h4>Gemejoa</h4>
+                <img class="gemejoa-image" src="img/gemejoa.png">
+            </a>
+
+            <h3 class="channels__title">Channels</h3>
+
+            <a class="jeguk-channel" href="https://www.youtube.com/@Jeguk72">
+                <span>Made for</span>
+                <h4>Jeguk72</h4>
+                <img class="jeguk-image" src="img/jeguk.png">
+            </a>
+        </div>
+
         <img class="bg-image" src="img/bg-image.png" />
     </main>
 
