--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/login.css" />
-    <title>Welcome to Jeguk</title>
+    <title>Welcome to Jeguk Fansite</title>
 </head>
 
 <body>
     <main id="main-screen">
-        <h1 class="main-header">Welcome to Jeguk</h1>
+        <h1 class="main-header">Welcome to Jeguk Fansite</h1>
         <form action="main.html" id="login-form">
             <h3 class="login-form__header">What's your name?</h3>
             <input class="login-form__input" type="text" />
