--- a/main.html
+++ b/main.html
@@ -6,25 +6,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/main.css" />
-    <title>Main Jeguk</title>
+    <title>Main Page</title>
 </head>
 
 <body>
     <header class="nav-bar">
-        <h1 class="nav-bar__title">Welcome to Jeguk</h1>
-        <a href="https://www.google.com">
-            <div class="icon-block">
-                <i class="fa-solid fa-circle-info fa-2x"></i>
-                <span>info</span>
-            </div>
-        </a>
+        <h1 class="nav-bar__title">Jeguk Fansite</h1>
+
+        <div class="nav-bar__div-bar"></div>
+
+        <div class="nav-bar__icons">
+            <a href="main.html">
+                <div class="icon-block">
+                    <i class="fa-solid fa-house fa-2x"></i>
+                    <span>main</span>
+                </div>
+            </a>
+            <a href="https://www.google.com">
+                <div class="icon-block">
+                    <i class="fa-solid fa-gamepad fa-2x"></i>
+                    <span>Progress</span>
+                </div>
+            </a>
+            <a href="https://www.google.com">
+                <div class="icon-block">
+                    <i class="fa-solid fa-circle-info fa-2x"></i>
+                    <span>info</span>
+                </div>
+            </a>
+        </div>
     </header>
 
     <main id="main-screen">
         <h1 class="welcome-title"></h1>
 
         <div class="channels">
-            <a class="gemejoa-channel" href="https://www.youtube.com/@gemejoa">
+            <a class="gemejoa-channel" href="https://www.youtube.com/@gemejoa" target="blank">
                 <span>Developed by</span>
                 <h4>Gemejoa</h4>
                 <img class="gemejoa-image" src="img/gemejoa.png">
@@ -32,7 +49,7 @@
 
             <h3 class="channels__title">Channels</h3>
 
-            <a class="jeguk-channel" href="https://www.youtube.com/@Jeguk72">
+            <a class="jeguk-channel" href="https://www.youtube.com/@Jeguk72" target="blank">
                 <span>Made for</span>
                 <h4>Jeguk72</h4>
                 <img class="jeguk-image" src="img/jeguk.png">
