--- a/main.html
+++ b/main.html
@@ -43,7 +43,7 @@
         <div class="channels">
             <a class="gemejoa-channel" href="https://www.youtube.com/@gemejoa" target="blank">
                 <span>Developed by</span>
-                <h4>Gemejoa</h4>
+                <h4>gemejoa</h4>
                 <img class="gemejoa-image" src="img/gemejoa.png">
             </a>
 
@@ -58,6 +58,26 @@
 
         <img class="bg-image" src="img/bg-image.png" />
     </main>
+
+    <footer id="info-bar">
+        <div class="info-column">
+            <p>
+                이 사이트는<br>
+                박태민이 프론트엔드 연습용으로 만든<br>
+                제구기의 팬사이트입니다<br>
+                전체화면 사용을<br>
+                강력히 권장합니다<br>
+            </p>
+        </div>
+        <div class="info-column">
+            <a href="https://www.youtube.com/@gemejoa" target="black">
+                <span>지메조아 채널<br></span>
+            </a>
+            <a href="https://www.youtube.com/@jeguk72" target="black">
+                <span>Jeguk72 채널</span>
+            </a>
+        </div>
+    </footer>
 
     <script src="https://kit.fontawesome.com/6ad0c68f5d.js" crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
