Created Progress.html and nav-bar.css

--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
                     <span>main</span>
                 </div>
             </a>
-            <a href="https://www.google.com">
+            <a href="progress.html">
                 <div class="icon-block">
                     <i class="fa-solid fa-gamepad fa-2x"></i>
                     <span>Progress</span>
