--- a/progress.html
+++ b/progress.html
@@ -1,1 +1,48 @@
-Progress Page.
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/progress.css" />
+    <title>Progress Page</title>
+</head>
+
+<body>
+    <header class="nav-bar">
+        <h1 class="nav-bar__title">Jeguk Fansite</h1>
+
+        <div class="nav-bar__div-bar"></div>
+
+        <div class="nav-bar__icons">
+            <a href="main.html">
+                <div class="icon-block">
+                    <i class="fa-solid fa-house fa-2x"></i>
+                    <span>main</span>
+                </div>
+            </a>
+            <a href="progress.html">
+                <div class="icon-block">
+                    <i class="fa-solid fa-gamepad fa-2x"></i>
+                    <span>Progress</span>
+                </div>
+            </a>
+            <a href="https://www.google.com">
+                <div class="icon-block">
+                    <i class="fa-solid fa-circle-info fa-2x"></i>
+                    <span>info</span>
+                </div>
+            </a>
+        </div>
+    </header>
+
+    <main id="main-screen">
+        <img class="bg-image" src="img/bg-image.png" />
+    </main>
+
+    <script src="https://kit.fontawesome.com/6ad0c68f5d.js" crossorigin="anonymous"></script>
+    <script src="js/progress.js"></script>
+</body>
+
+</html>
