Added some javascript code

--- a/progress.html
+++ b/progress.html
@@ -38,6 +38,17 @@
     </header>
 
     <main id="main-screen">
+        <h1 class="main__title">Progress</h1>
+        <h4 class="main__subtitle">Put your geometry dash progress</h4>
+
+        <form class="progress">
+            <input class="level-input" type="text" placeholder="level" />
+            <input class="progress-input" type="number" placeholder="percent" />
+            <button class="progress__button">Push</button>
+        </form>
+
+        <ul class="progress__list"></ul>
+
         <img class="bg-image" src="img/bg-image.png" />
     </main>
 
