Created info.html and info.css

--- a/info.html
+++ b/info.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/progress.css" />
-    <title>Progress Page</title>
+    <link rel="stylesheet" href="css/info.css" />
+    <title>Info Page</title>
 </head>
 
 <body>
@@ -38,22 +38,33 @@
     </header>
 
     <main id="main-screen">
-        <h1 class="main__title">Progress</h1>
-        <h4 class="main__subtitle">Put your geometry dash progress</h4>
-
-        <form class="progress">
-            <input class="level-input" type="text" placeholder="level" />
-            <input class="progress-input" type="number" placeholder="percent" />
-            <button class="progress__button">Push</button>
-        </form>
-
-        <ul class="progress__list"></ul>
-
         <img class="bg-image" src="img/bg-image.png" />
     </main>
 
+
+    <!--
+    <footer id="info-bar">
+        <div class="info-column">
+            <p>
+                이 사이트는<br>
+                박태민이 프론트엔드 연습용으로 만든<br>
+                제구기의 팬사이트입니다<br>
+                전체화면 사용을<br>
+                강력히 권장합니다<br>
+            </p>
+        </div>
+        <div class="info-column">
+            <a href="https://www.youtube.com/@gemejoa" target="black">
+                <span>지메조아 채널<br></span>
+            </a>
+            <a href="https://www.youtube.com/@jeguk72" target="black">
+                <span>Jeguk72 채널</span>
+            </a>
+        </div>
+    </footer>
+    -->
+
     <script src="https://kit.fontawesome.com/6ad0c68f5d.js" crossorigin="anonymous"></script>
-    <script src="js/progress.js"></script>
 </body>
 
 </html>
