--- a/main.html
+++ b/main.html
@@ -28,7 +28,7 @@
                     <span>Progress</span>
                 </div>
             </a>
-            <a href="https://www.google.com">
+            <a href="info.html">
                 <div class="icon-block">
                     <i class="fa-solid fa-circle-info fa-2x"></i>
                     <span>info</span>
