Added info-window and title-bar

--- a/info.html
+++ b/info.html
@@ -38,6 +38,14 @@
     </header>
 
     <main id="main-screen">
+        <div class="info-window">
+            <div class="title-bar">
+                <span class="info-window__title">Info Window</span>
+                <a href="main.html"><i class="info-window__exit-icon fa-solid fa-xmark fa-2x"></i></a>
+                <div class="info-window__exit-icon__div-bar"></div>
+                <div class="info-window__div-bar"></div>
+            </div>
+        </div>
         <img class="bg-image" src="img/bg-image.png" />
     </main>
 
