--- a/info.html
+++ b/info.html
@@ -45,6 +45,32 @@
                 <div class="info-window__exit-icon__div-bar"></div>
                 <div class="info-window__div-bar"></div>
             </div>
+            <div class="info-window__main">
+                <h1>Info</h1>
+                <p>
+                    연습 기념으로 제구기를 위한 사이트를 만들어봤는데<br>
+                    뭐 넣을 기능이 없어서 프로그레스 메모 기능이라도 넣어봤는데<br>
+                    솔직히 뭐 있는게 없어서 차차 업데이트 할 예정입니다
+                </p>
+
+                <h2>Feedback</h2>
+                <p>
+                    버그 제보나 피드백 등등 문의할 것이 있다면<br>
+                    디스코드 <mark>박태민#3520</mark>으로<br>
+                    얘기해주시면 감사하겠습니다
+                </p>
+
+                <h2>Version</h2>
+                <p>
+                    (출시 예정) 0.0v
+                </p>
+
+                <h2>Developer</h2>
+                <p>
+                    박태민 (gemejoa) / 14<br>
+                    <a href="https://www.youtube.com/@gemejoa" target="blank">gemejoa 채널</a>
+                </p>
+            </div>
         </div>
         <img class="bg-image" src="img/bg-image.png" />
     </main>
