--- a/info.html
+++ b/info.html
@@ -62,7 +62,7 @@
 
                 <h2>Version</h2>
                 <p>
-                    (출시 예정) 0.0v
+                    (beta) 0.1v
                 </p>
 
                 <h2>Developer</h2>
@@ -74,29 +74,6 @@
         </div>
         <img class="bg-image" src="img/bg-image.png" />
     </main>
-
-
-    <!--
-    <footer id="info-bar">
-        <div class="info-column">
-            <p>
-                이 사이트는<br>
-                박태민이 프론트엔드 연습용으로 만든<br>
-                제구기의 팬사이트입니다<br>
-                전체화면 사용을<br>
-                강력히 권장합니다<br>
-            </p>
-        </div>
-        <div class="info-column">
-            <a href="https://www.youtube.com/@gemejoa" target="black">
-                <span>지메조아 채널<br></span>
-            </a>
-            <a href="https://www.youtube.com/@jeguk72" target="black">
-                <span>Jeguk72 채널</span>
-            </a>
-        </div>
-    </footer>
-    -->
 
     <script src="https://kit.fontawesome.com/6ad0c68f5d.js" crossorigin="anonymous"></script>
 </body>
